--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   cypress-e2e-electron:
     runs-on: ubuntu-latest
+    container: 
+      image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
@@ -21,6 +23,66 @@ jobs:
           browser: electron
           record: true
           group: UI Electron
+          spec: ${{ github.event.inputs.spec }}
+        env:
+          CYPRESS_RECORD_KEY: ebd585e9-8633-4446-a2bc-9c36129f1075
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  cypress-e2e-chrome:
+    needs: cypress-e2e-electron
+    runs-on: ubuntu-latest
+    container: 
+      image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+        
+      - name: Cypress run
+        uses: cypress-io/github-action@v5.0.9
+        with:
+          install-commands: yarn install
+          browser: chrome
+          record: true
+          group: UI Chrome
+          spec: ${{ github.event.inputs.spec }}
+        env:
+          CYPRESS_RECORD_KEY: ebd585e9-8633-4446-a2bc-9c36129f1075
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  cypress-e2e-firefox:
+    needs: cypress-e2e-chrome
+    runs-on: ubuntu-latest
+    container: 
+      image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+        
+      - name: Cypress run
+        uses: cypress-io/github-action@v5.0.9
+        with:
+          install-commands: yarn install
+          browser: firefox
+          record: true
+          group: UI Firefox
+          spec: ${{ github.event.inputs.spec }}
+        env:
+          CYPRESS_RECORD_KEY: ebd585e9-8633-4446-a2bc-9c36129f1075
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  cypress-e2e-edge:
+    needs: cypress-e2e-firefox
+    runs-on: ubuntu-latest
+    container: 
+      image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+        
+      - name: Cypress run
+        uses: cypress-io/github-action@v5.0.9
+        with:
+          install-commands: yarn install
+          browser: edge
+          record: true
+          group: UI Firefox
           spec: ${{ github.event.inputs.spec }}
         env:
           CYPRESS_RECORD_KEY: ebd585e9-8633-4446-a2bc-9c36129f1075
