--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
@@ -32,6 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
@@ -52,6 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
@@ -72,6 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
