--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -50,7 +50,7 @@ jobs:
           CYPRESS_RECORD_KEY: ebd585e9-8633-4446-a2bc-9c36129f1075
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   cypress-e2e-firefox:
-    needs: cypress-e2e-chrome
+    needs: cypress-e2e-electron
     runs-on: ubuntu-latest
     container: 
       image: cypress/browsers:node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
@@ -71,7 +71,7 @@ jobs:
           CYPRESS_RECORD_KEY: ebd585e9-8633-4446-a2bc-9c36129f1075
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   cypress-e2e-edge:
-    needs: cypress-e2e-firefox
+    needs: cypress-e2e-electron
     runs-on: ubuntu-latest
     container: 
       image: cypress/browsers:node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
@@ -86,7 +86,7 @@ jobs:
           install-command: yarn install
           browser: edge
           record: true
-          group: UI Firefox
+          group: UI Edge
           spec: ${{ github.event.inputs.spec }}
         env:
           CYPRESS_RECORD_KEY: ebd585e9-8633-4446-a2bc-9c36129f1075
