--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -5,11 +5,14 @@ on:
     inputs: 
       cli: 
         description: Run by cypress command line
-        default: yarn cypress run
+        default: node runner.js
 
 jobs:
   cypress-electron-tests:
     runs-on: ubuntu-latest
+    container: 
+      image: cypress/browsers:node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
