--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -2,10 +2,6 @@ name: Cypress Tests
 
 on: 
   workflow_dispatch: 
-    inputs: 
-      cli: 
-        description: Run by cypress command line
-        default: node runner.js
 
 jobs:
   cypress-electron-tests:
@@ -21,4 +17,60 @@ jobs:
         run: yarn install
         
       - name: Run e2e tests
-        run: ${{github.event.inputs.cli}}
+        run: node runner-electron.js
+    env: 
+      TARGET_ELECTRON_TOKEN: ${{ secrets.TARGET_ELECTRON_TOKEN }}
+
+  cypress-chrome-tests:
+    needs: cypress-electron-tests
+    runs-on: ubuntu-latest
+    container: 
+      image: cypress/browsers:node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+        
+      - name: Install dependencies
+        run: yarn install
+        
+      - name: Run e2e tests
+        run: node runner-chrome.js
+    env: 
+      TARGET_CHROME_TOKEN: ${{ secrets.TARGET_CHROME_TOKEN }}
+
+  cypress-firefox-tests:
+    needs: cypress-electron-tests
+    runs-on: ubuntu-latest
+    container: 
+      image: cypress/browsers:node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+        
+      - name: Install dependencies
+        run: yarn install
+        
+      - name: Run e2e tests
+        run: node runner-firefox.js
+    env: 
+      TARGET_FIREFOX_TOKEN: ${{ secrets.TARGET_FIREFOX_TOKEN }}
+      
+  cypress-edge-tests:
+    needs: cypress-electron-tests
+    runs-on: ubuntu-latest
+    container: 
+      image: cypress/browsers:node-18.14.1-chrome-110.0.5481.96-1-ff-109.0-edge-110.0.1587.41-1
+      options: --user 1001
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+        
+      - name: Install dependencies
+        run: yarn install
+        
+      - name: Run e2e tests
+        run: node runner-edge.js
+    env: 
+      TARGET_EDGE_TOKEN: ${{ secrets.TARGET_EDGE_TOKEN }}
